--- a/product-rating-without-vite/styles.css
+++ b/product-rating-without-vite/styles.css
@@ -3,3 +3,26 @@
   color: green;
   cursor: pointer;
 }
+
+body {
+  background: yellow;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  /* width: 100px;
+  height: 100px;
+  width: 100vw;
+  height: 100vh; */
+}
+
+
+.item {
+  border: solid 1px gray;
+  background: green;
+  flex-grow: 1;
+  flex-basis: content;
+  /* height: 100px; */
+  /* width: 100px; */
+}
